--- a/client/public/index.html
+++ b/client/public/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
+    <meta name="google-adsense-account" content="ca-pub-1352355991805843">
     <meta
       name="description"
       content="Meetflow - WebRTC based peer to peer video calling and messaging web app build with MERN stack."
